src/test/deca/etapeB/invalid/and.res
./src/test/deca/etapeB/invalid/and.deca:7:6: this operation can be done only on boolean types
